--- a/Minecraft Bedrock Edition Server/Merlins Magical London/Dockerfile
+++ b/Minecraft Bedrock Edition Server/Merlins Magical London/Dockerfile
@@ -4,6 +4,9 @@ FROM ich777/minecraftbedrockserver
 RUN apt-get update
 RUN apt-get install -y \
     unzip 
+COPY "Merlin's Magical London.zip" /tmp
+RUN cd /tmp && unzip "Merlin's Magical London.zip" && mv "Merlin's Magical London" /serverdata/serverfiles/worlds/ 
+ADD 
 RUN wget https://github.com/KrumpetPirate/AAXtoMP3/archive/master.zip && \
   unzip master.zip -d /
 
