--- a/Minecraft Bedrock Edition Server/Merlins Magical London/Dockerfile
+++ b/Minecraft Bedrock Edition Server/Merlins Magical London/Dockerfile
@@ -6,8 +6,5 @@ RUN apt-get install -y \
     unzip 
 COPY "Merlin's Magical London.zip" /tmp
 RUN cd /tmp && unzip "Merlin's Magical London.zip" && mv "Merlin's Magical London" /serverdata/serverfiles/worlds/ 
-ADD 
-RUN wget https://github.com/KrumpetPirate/AAXtoMP3/archive/master.zip && \
-  unzip master.zip -d /
-
-CMD /AAXtoMP3-master/AAXtoMP3 --complete_dir /complete --target_dir /dest --authcode $AUTH_CODE  /source/*.aax
+ADD server.properties /serverdata/serverfiles/
+ADD levelname "/serverdata/serverfiles/worlds/Merlin's Magical London"
